--- a/malla_turismo_van.html
+++ b/malla_turismo_van.html
@@ -100,7 +100,8 @@
     "Informática Google Eart Pro – Sistema Gis – Sistema Integrados Guiemaps": ["Informática 1"],
     "Organización y gestión de destinos turísticos": ["Introducción al Turismo 2", "Planificación Turística"], 
     "Trabajo Social Comunitario 3": ["Trabajo Social Comunitario 2"], 
-    "Gestión de la Calidad en Turismo": ["Organización y gestión de Empresas de Transportes", "Administración y gestión de recursos humanos", "Organización y Gestión de empresas de Alojamiento"],
+    "Gestión de la Calidad en Turismo": ["Organización y gestión de Empresas de Transportes", "Administración y gestión de recursos humanos", 
+"Organización y Gestión de empresas de Alojamiento"],
     "Marketing turístico": ["Organización y gestión de Empresas de Transportes", "Organización y Gestión de empresas de Alojamiento", "Gestión pública del Turismo"], 
     "Elaboración y evaluación de proyectos turísticos ambientales": ["Introducción al Turismo 2", "Taller de Investigación e Innovación turística", "Comunicación e innovación tecnológica"], 
     "Circuitos e Impacto Ambiental": ["Elaboración y evaluación de proyectos turísticos ambientales"], 
