--- a/malla_turismo_van.html
+++ b/malla_turismo_van.html
@@ -192,7 +192,7 @@
       contenedor.appendChild(divAño);
     }
     document.getElementById("contador").textContent =
-      `Materias aprobadas: ${total} | Tecnicatura: ${tecnica} | Licenciatura: ${licencia}`;
+      `Materias aprobadas: ${total} | Tecnicatura: ${tecnica}/42 | Licenciatura: ${licencia}/55`;
   }
   crearMalla();
 </script>
