--- a/malla_turismo_van.html
+++ b/malla_turismo_van.html
@@ -193,9 +193,13 @@
       contenedor.appendChild(divAño);
     }
     document.getElementById("contador").textContent =
-      `Materias aprobadas: ${total} | Tecnicatura: ${tecnica}/42 | Licenciatura: ${licencia}/56`;
+      `Materias aprobadas: ${total} | Tecnicatura: ${tecnica}/40 | Licenciatura: ${licencia}/56`;
   }
   crearMalla();
 </script>
+  <video id="felicitacion" width="300" style="display:none; position: fixed; bottom: 10px; right: 10px; z-index: 9999;" autoplay muted>
+  <source src="felicitacion.mp4" type="video/mp4">
+  Tu navegador no soporta videos :(
+</video>
 </body>
 </html>
