--- a/malla_turismo_van.html
+++ b/malla_turismo_van.html
@@ -39,7 +39,15 @@
         "Introducción al Turismo 2", "Programación de Circuitos", "Geografía Turística Mercosur", 
         "Destinos y Patrimonio Turístico de Mercosur", "Inglés 2", "Portugués 2", "Trabajo Social Comunitario 1"
       ]
-    },
+    }
+      contenedor.appendChild(divAño);
+
+  const materiasDelAño = estructura[año].flat();
+  const todasAprobadas = materiasDelAño.every(nombre => estado[nombre]);
+
+  if (todasAprobadas) {
+    mostrarFelicitacion();
+  },
     "Segundo Año": {
       "3° Cuatrimestre": [
         "Geografía turística Argentina", "Destinos y Patrimonio Turístico de Argentina", "Organización y gestión de Empresas de Transportes",
@@ -49,7 +57,15 @@
         "Organización y Gestión de empresas de Alojamiento", "Geografía turística AMBA", "Destinos y Patrimonio Turístico de AMBA",
         "Planificación Turística", "Metodología de la Investigación", "Turismo Sustentable"
       ]
-    },
+    }
+    contenedor.appendChild(divAño);
+
+  const materiasDelAño = estructura[año].flat();
+  const todasAprobadas = materiasDelAño.every(nombre => estado[nombre]);
+
+  if (todasAprobadas) {
+    mostrarFelicitacion();
+  },
     "Tercer Año": {
       "5° Cuatrimestre": [
         "Geografía turística CABA", "Destinos y Patrimonio Turístico de CABA", "Organización y gestión de Empresas de Viajes y Turismo",
@@ -59,7 +75,16 @@
         "Estadística Turística", "Obligaciones y contratos turísticos", "Informática Google Eart Pro – Sistema Gis – Sistema Integrados Guiemaps",
         "Organización y gestión de destinos turísticos", "Comunicación e innovación tecnológica", "Trabajo Social Comunitario 3"
       ]
-    },
+    }
+    contenedor.appendChild(divAño);
+
+  // 👇 Aca agregás lo del video
+  const materiasDelAño = estructura[año].flat();
+  const todasAprobadas = materiasDelAño.every(nombre => estado[nombre]);
+
+  if (todasAprobadas) {
+    mostrarFelicitacion();
+  },
     "Cuarto Año": {
       "7° Cuatrimestre": [
         "Gestión de la Calidad en Turismo", "Marketing turístico", "Elaboración y evaluación de proyectos turísticos ambientales"
@@ -67,7 +92,15 @@
       "8° Cuatrimestre": [
         "Circuitos e Impacto Ambiental", "Diseño de productos potenciales e innovadores", "Trabajo Social Comunitario 4", "Proyecto Final o Tesina"
       ]
-    },
+    }
+    contenedor.appendChild(divAño);
+
+  const materiasDelAño = estructura[año].flat();
+  const todasAprobadas = materiasDelAño.every(nombre => estado[nombre]);
+
+  if (todasAprobadas) {
+    mostrarFelicitacion();
+  },
     "Optativa": [
       "Turismo Social", "Turismo Rural", "Turismo Accesible", "Turismo Alternativo", "Turismo Educativo", "Turismo Cultural", 
       "Congresos y Cruceros", "Corporativo e Incentivos", "Taller Técnicas de Interpretación del Patrimonio"
@@ -195,6 +228,7 @@
     document.getElementById("contador").textContent =
       `Materias aprobadas: ${total} | Tecnicatura: ${tecnica}/40 | Licenciatura: ${licencia}/56`;
   }
+ verificarAñosCompletos();
   crearMalla();
 </script>
   <video id="felicitacion" width="300" style="display:none; position: fixed; bottom: 10px; right: 10px; z-index: 9999;" autoplay muted>
