--- a/malla_turismo_van.html
+++ b/malla_turismo_van.html
@@ -20,6 +20,27 @@
     button { display: block; margin: 1rem auto; padding: 0.5rem 1rem; font-size: 1rem; background: #4bbf9c; color: white; border: none; border-radius: 6px; cursor: pointer; }
     button:hover { background: #3aa487; }
     @media (max-width: 768px) { .contenedor { flex-direction: column; overflow-x: visible; } }
+    #celebracion {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+#celebracion.oculto {
+  display: none;
+}
+
+#celebracion video {
+  width: 300px;
+  border-radius: 20px;
+}
   </style>
 </head>
 <body>
@@ -155,7 +176,18 @@
       location.reload();
     }
   }
+    function mostrarCelebracion() {
+  const celebracion = document.getElementById("celebracion");
+  const video = document.getElementById("videoFiesta");
 
+  celebracion.classList.remove("oculto");
+  video.currentTime = 0;
+  video.play();
+
+  setTimeout(() => {
+    celebracion.classList.add("oculto");
+  }, 4000); // lo esconde después de 4 segundos
+}
   function crearMalla() {
     const contenedor = document.getElementById("contenedor");
     contenedor.innerHTML = "";
@@ -230,9 +262,10 @@
   }
  verificarAñosCompletos();
   crearMalla();
+    
 </script>
   <video id="felicitacion" width="300" style="display:none; position: fixed; bottom: 10px; right: 10px; z-index: 9999;" autoplay muted>
-  <source src="felicitacion.mp4" type="video/mp4">
+  <source src="Bichito felicitaciones.mp4" type="video/mp4">
   Tu navegador no soporta videos :(
 </video>
 </body>
